--- a/conf/news.txt.in
+++ b/conf/news.txt.in
@@ -22,5 +22,5 @@ http://lists.sourceforge.net/lists/listinfo/pvpgn-users )
 4. IRC live support: #pvpgn on irc.pvpgn.org
 
 Enjoy!
-The PvPGN Team
-http://www.PvPGN.org
+The BNETD-X Team
+http://www.BNETD-X.org
